--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
     <!-- My CSS -->
     <link rel="stylesheet" href="style.css" />
 
-    <title>Roseanne Park</title>
+    <title>Portofolio | Nine Nurlaila</title>
   </head>
   <body id="home">
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top" style="background-color: rgb(244, 100, 182)" shadow-sm>
       <div class="container">
-        <a class="navbar-brand" href="#">Roseanne Park</a>
+        <a class="navbar-brand" href="#">My Portofolio</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -33,7 +33,7 @@
               <a class="nav-link" href="#about">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#projects">Projects</a>
+              <a class="nav-link" href="#achievement">achievement</a>
             </li>
           </ul>
         </div>
@@ -43,9 +43,9 @@
 
     <!-- Jumbotron -->
     <section class="jumbotron text-center">
-      <img src="img/download.jpg" alt="Roseanne Park" width="200" class="rounded-circle img-thumbnail" />
-      <h1 class="display-4">Roseanne Park</h1>
-      <p class="lead">Singer | Dancer</p>
+      <img src="img/pp.jpg" alt="Nine Nurlaila" width="200" class="rounded-circle img-thumbnail" />
+      <h1 class="display-4">Nine Nurlaila</h1>
+      <p class="lead">Pelajar | SMKN 1 Majalengka</p>
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#fff" fill-opacity="1" d="M0,160L26.7,160C53.3,160,107,160,160,154.7C213.3,149,267,139,320,160C373.3,181,427,235,480,250.7C533.3,267,587,245,640,213.3C693.3,181,747,139,800,138.7C853.3,139,907,181,960,218.7C1013.3,256,1067,288,1120,282.7C1173.3,277,1227,235,1280,202.7C1333.3,171,1387,149,1413,138.7L1440,128L1440,320L1413.3,320C1386.7,320,1333,320,1280,320C1226.7,320,1173,320,1120,320C1066.7,320,1013,320,960,320C906.7,320,853,320,800,320C746.7,320,693,320,640,320C586.7,320,533,320,480,320C426.7,320,373,320,320,320C266.7,320,213,320,160,320C106.7,320,53,320,27,320L0,320Z"></path></svg>
       </svg>
     </section>
@@ -56,20 +56,13 @@
       <div class="container">
         <div class="row text-center mb-3">
           <div class="col">
-            <h2>About Roseanne Park</h2>
+            <h2>About Me</h2>
           </div>
         </div>
         <div class="row justify-content-center fs-5 text-center">
           <div class="col-md-4">
             <p>
-              Roseanne Park atau yang lebih dikenal dengan nama Rose BLACKPINK, merupakan perempuan kelahiran Selandia Baru. Dirinya kemudian besar di Melbourne, Australia. Rose lahir pada 11 Februari 1997 di Auckland, Selandia Baru dan
-              memiliki satu kakak perempuan. Meskipun lahir di luar Korea Selatan, nyatanya Rose merupakan keturunan Korea asli.
-            </p>
-          </div>
-          <div class="col-md-4">
-            <p>
-              Rose juga diketahui pernah bersekolah di Canterbury Girls, Secondary College di Melbourne. Di BLACKPINK, Rose mengisi posisi sebagai Vocalis utama dan Dancer. Nyatanya, Rose menjadi anggota terakhir yang bergabung dengan
-              BLACKPINK dengan periode masa latihan terpendek, yakni 4 tahun.Memiliki badan yang proporsional, membuat Rose BLACKPINK banyak membuat publik iri. Rose memiliki tinggi 168.7 cm.
+              Hallo!! Saya Nine Nurlaila. Saya lahir di Majalengka pada tanggal 09 Oktober 2005. Saya tinggal di Blok Kubangsari. Hobi saya bermain bulutangkis dan mendengarkan musik. Saya sekolah di SMKN 1 Majalengka dengan jurusan Teknik Komputer dan Jaringan (TKJ). Saya memiliki kemampuan di bidang komputer diantaranya mengoperasikan Microsoft office seperti Microsoft Word, Excel, Powerpoint.
             </p>
           </div>
         </div>
@@ -84,41 +77,28 @@
     </section>
     <!-- Akhir About -->
 
-    <!-- Projects -->
-    <section id="projects">
+    <!-- achievement -->
+    <section id="achievement">
       <div class="container">
         <div class="row text-center mb-3">
          <div class="col">
-          <h2>Projects Award</h2>
+          <h2>My Achievement</h2>
          </div> 
         </div>
         <div class="row">
           <div class="col-md-4 mb-3">
             <div class="card">
-              <img src="img/projects/r1.jpg" class="card-img-top" alt="Project award
-              1" />
+              <img src="img/projects/n1.jpg" class="card-img-top" alt="achievement1" />
               <div class="card-body">
-                <p class="card-text"> first artist to reach number one on a Billboard Global chart as a soloist and as part of a group.
-
+                <p class="card-text"> Sertifikat TOEIC "English Language Test For International Communication" 13 Maret 2023.
                 </p>
               </div>
             </div>
           </div><div class="col-md-4 mb-3">
             <div class="card">
-              <img src="img/projects/r2.jpg" class="card-img-top" alt="Project award
-              2" />
+              <img src="img/projects/n2.jpg" class="card-img-top" alt="achievement2" />
               <div class="card-body">
-                <p class="card-text"> MBE (Most Excellent Order of the British Empire) from King Charles lll.
-
-                </p>
-              </div>
-            </div>
-          </div><div class="col-md-4 mb-3">
-            <div class="card">
-              <img src="img/projects/r3.jpg" class="card-img-top" alt="Project award
-              3" />
-              <div class="card-body">
-                <p class="card-text">most viewed YouTube music video in 24 hours by a solo K-pop artist.
+                <p class="card-text"> Sertifikat Peserta Penguatan Pendidikan Karakter (PKL), Pada Tanggal 8 s.d 10 November 2022.    
                 </p>
               </div>
             </div>
@@ -128,7 +108,7 @@
 
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#ffffff" fill-opacity="1" d="M0,160L48,149.3C96,139,192,117,288,144C384,171,480,245,576,234.7C672,224,768,128,864,117.3C960,107,1056,181,1152,202.7C1248,224,1344,192,1392,176L1440,160L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"></path></svg>
     </section>
-    <!-- Akhir Projects -->
+    <!-- Akhir achievement -->
 
     <!-- Footer -->
     <footer class="bs-pink text-black text-center">
