--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     </section>
     <!-- Akhir About -->
 
-    <!-- achievement -->
+    <!-- Achievement -->
     <section id="achievement">
       <div class="container">
         <div class="row text-center mb-3">
@@ -105,10 +105,9 @@
           </div>
         </div>
       </div>
-
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#ffffff" fill-opacity="1" d="M0,160L48,149.3C96,139,192,117,288,144C384,171,480,245,576,234.7C672,224,768,128,864,117.3C960,107,1056,181,1152,202.7C1248,224,1344,192,1392,176L1440,160L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"></path></svg>
     </section>
-    <!-- Akhir achievement -->
+    <!-- Akhir Achievement -->
 
     <!-- Footer -->
     <footer class="bs-pink text-black text-center">
