--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
               <a class="nav-link" href="#about">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#achievement">achievement</a>
+              <a class="nav-link" href="#achievement">Achievement</a>
             </li>
           </ul>
         </div>
